# fluxy

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflow/: release.yaml
.github/workflows/: release.yaml
src/: argument.rs  client.rs  downloader.rs  fetcher.rs  geoip.rs  lib.rs  main.rs  models.rs  resolver.rs  utils.rs  validator.rs
src/cli/: argument.rs  main.rs
src/fetcher/: config.rs  mod.rs
src/geolookup/: mod.rs  models.rs
src/negotiators/: http.rs  https.rs  mod.rs  socks4.rs  socks5.rs
src/providers/: free_proxy_list.rs  github.rs  mod.rs  models.rs  proxyscrape.rs
src/proxy/: client.rs  mod.rs  models.rs
src/validator/: checker.rs  config.rs  mod.rs
