[package]
name = "fluxy"
version = "0.1.4"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
log = { version = "0.4.22", optional = true }
stderrlog = { version = "0.6.0", optional = true }
fake = "3.0.1"
reqwest = { version = "0.12.9", features = ["stream"] }
tokio-task-pool = "0.1.5"
async-trait = "0.1.83"
scraper = { version = "0.21.0", default-features = false, features = ["atomic"] }
status-line = { version = "0.2.0", optional = true }
colored = { version = "2.1.0", optional = true }
futures-util = "0.3.31"
directories = "5.0.1"
maxminddb = "0.24.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "fluxy"

[features]
default = ["log", "progress_bar"]
log = ["stderrlog", "dep:log"]
progress_bar = ["colored", "status-line"]
