[package]
name = "fluxy"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
tokio = { version = "1.41.1", features = ["net", "rt-multi-thread"] }
log = { version = "0.4.22", optional = true }
stderrlog = { version = "0.6.0", optional = true }
fake = "3.0.1"
tokio-task-pool = "0.1.5"
async-trait = "0.1.83"
scraper = { version = "0.21.0", default-features = false, features = ["atomic"] }
status-line = { version = "0.2.0", optional = true }
colored = { version = "2.1.0", optional = true }
directories = "5.0.1"
maxminddb = "0.24.0"

# request client
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1"] }
http-body-util = "0.1.2"
hyper-tls = "0.6.0"
native-tls = "0.2.12"
tokio-native-tls = "0.3.1"
httparse = "1.9.5"

[lib]
path = "src/lib.rs"

[[bin]]
name = "fluxy"

[features]
default = ["log", "progress_bar"]
log = ["stderrlog", "dep:log"]
progress_bar = ["colored", "status-line"]
